# logdor

./: CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer-setup.sh  devcontainer.json  get_linuxdeploy.sh  get_qt.sh
.github/workflows/: deploy.yml
app/: CMakeLists.txt
app/resources/: logdor.desktop  resources.qrc
app/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plugininterface.h  pluginmanager.cpp  pluginmanager.h
plugins/: CMakeLists.txt
plugins/bookmarkviewer/: CMakeLists.txt  README.md  bookmarkviewer.cpp  bookmarkviewer.h
plugins/clfviewer/: CMakeLists.txt  README.md  clfentry.h  clftablemodel.cpp  clftablemodel.h  clfviewer.cpp  clfviewer.h
plugins/csvviewer/: CMakeLists.txt  README.md  csventry.h  csvtablemodel.cpp  csvtablemodel.h  csvviewer.cpp  csvviewer.h
plugins/hexdumpviewer/: CMakeLists.txt  README.md  hexdumpviewer.cpp  hexdumpviewer.h
plugins/log4jviewer/: CMakeLists.txt  README.md  log4jentry.h  log4jtablemodel.cpp  log4jtablemodel.h  log4jviewer.cpp  log4jviewer.h
plugins/logcatviewer/: CMakeLists.txt  README.md  logcatentry.h  logcattablemodel.cpp  logcattablemodel.h  logcatviewer.cpp  logcatviewer.h  taglabel.cpp  taglabel.h
plugins/mapviewer/: CMakeLists.txt  README.md  maptablemodel.cpp  maptablemodel.h  mapviewer.cpp  mapviewer.h
plugins/pgnviewer/: CMakeLists.txt  README.md  chessboardwidget.cpp  chessboardwidget.h  chessgame.cpp  chessgame.h  pgntablemodel.cpp  pgntablemodel.h  pgnviewer.cpp  pgnviewer.h
plugins/plaintextviewer/: CMakeLists.txt  README.md  plaintexttablemodel.cpp  plaintexttablemodel.h  plaintextviewer.cpp  plaintextviewer.h  plaintextviewer.json
plugins/pythonlogviewer/: CMakeLists.txt  README.md  pythonlogentry.h  pythonlogtablemodel.cpp  pythonlogtablemodel.h  pythonlogviewer.cpp  pythonlogviewer.h
plugins/regexviewer/: CMakeLists.txt  README.md  regexsettingsdialog.cpp  regexsettingsdialog.h  regextablemodel.cpp  regextablemodel.h  regexviewer.cpp  regexviewer.h  valuecolordialog.cpp  valuecolordialog.h
plugins/selectedlineviewer/: CMakeLists.txt  README.md  selectedlineviewer.cpp  selectedlineviewer.h
plugins/shared/: CMakeLists.txt  linenumberdelegate.cpp  linenumberdelegate.h
plugins/syslogviewer/: CMakeLists.txt  README.md  syslogentry.h  syslogtablemodel.cpp  syslogtablemodel.h  syslogviewer.cpp  syslogviewer.h
