add_subdirectory(bookmarkviewer)
add_subdirectory(clfviewer)
add_subdirectory(csvviewer)
add_subdirectory(hexdumpviewer)
add_subdirectory(logcatviewer)
add_subdirectory(pgnviewer)
add_subdirectory(plaintextviewer)
add_subdirectory(regexviewer)
add_subdirectory(selectedlineviewer)
add_subdirectory(syslogviewer)
